force-app/main/default/objects/Advisory_Planning_Item__c/Advisory_Planning_Item__c.object-meta.xml
<CustomObject>
    <description>Advisory Planning Item Informatiton.</description>
    <label>Advisory Planning Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Advisory Planning Item No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advisory Planning Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>