force-app/main/default/objects/Advisory_Planning_Item__c/fields/Advisory_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Item_Type__c</fullName>
    <description>The advisory planning item type, using to identify which tab that the item is belonged to.</description>
    <label>Advisory Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Expense &amp; Liquidity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>