force-app/main/default/objects/Advisory_Planning_Item__c/fields/Advisory_Planning__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Planning__c</fullName>
    <description>The advisory planning master.</description>
    <label>Advisory Planning</label>
    <referenceTo>Advisory_Planning__c</referenceTo>
    <relationshipLabel>Advisory Planning Items</relationshipLabel>
    <relationshipName>Advisory_Planning_and_RTL_Product_Master</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>