force-app/main/default/objects/Advisory_Planning_Item__c/fields/Baseline_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Allocation__c</fullName>
    <description>The baseline allocation percentage based on each advisory item type.</description>
    <label>Baseline Allocation (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>