force-app/main/default/objects/Advisory_Planning_Item__c/fields/Baseline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Amount__c</fullName>
    <description>The baseline amount or the outstanding amount for each product item.</description>
    <label>Baseline Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>