force-app/main/default/objects/Advisory_Planning_Item__c/fields/Is_Product_Holding__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Holding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate that planning item is from the product holding or not.</description>
    <label>IsProductHolding</label>
    <type>Checkbox</type>
</CustomField>