force-app/main/default/objects/Advisory_Planning_Item__c/fields/Item_Key__c.field-meta.xml
<CustomField>
    <fullName>Item_Key__c</fullName>
    <description>The external key of the advisory planning item.
Advisory Plan Id - Item Type - Is Product Holding - Product Group - Product Master Id
Is Product Holding = TRUE --&gt; 1 , Otherwise --&gt; 0</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>