force-app/main/default/objects/Advisory_Planning_Item__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>The product family information for each item.</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVESTMENT</fullName>
            </value>
            <value>
                <fullName>DEPOSIT</fullName>
            </value>
            <value>
                <fullName>BOND</fullName>
            </value>
            <value>
                <fullName>BANCASSURANCE</fullName>
            </value>
            <value>
                <fullName>AUTO LOAN</fullName>
            </value>
            <value>
                <fullName>LOAN</fullName>
            </value>
            <value>
                <fullName>PERSONAL LOAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>