force-app/main/default/objects/Advisory_Planning_Item__c/fields/Product_Holding_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Holding_Code__c</fullName>
    <description>The product holding code  from current holding product.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>