force-app/main/default/objects/Advisory_Planning_Item__c/fields/Product_Master__c.field-meta.xml
<CustomField>
    <fullName>Product_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The reference product master information (if any).</description>
    <label>Product Master</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Advisory Planning Items</relationshipLabel>
    <relationshipName>Advisory_Planning_Items</relationshipName>
    <type>Lookup</type>
</CustomField>