force-app/main/default/objects/Advisory_Planning_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>The name of advisory product.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>