force-app/main/default/objects/Advisory_Planning_Item__c/fields/Product_Sub_Group_Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group_Asset_Class__c</fullName>
    <description>The values from field Sub Family and Asset Class of that product.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Sub Group - Asset Class</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>