force-app/main/default/objects/Advisory_Planning_Item__c/fields/RMC_1Year_Return__c.field-meta.xml
<CustomField>
    <fullName>RMC_1Year_Return__c</fullName>
    <description>The 1 year return of the investment product.</description>
    <formula>IF(ISNULL(Product_Master__r.RMC_1Year_Return__c), 0, Product_Master__r.RMC_1Year_Return__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1 Year Return (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>