force-app/main/default/objects/Advisory_Planning_Item__c/fields/Target_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Target_Allocation__c</fullName>
    <description>The target allocation percentage based on each advisory item type.</description>
    <label>Target Allocation (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>