force-app/main/default/objects/Advisory_Planning_Item__c/fields/Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount__c</fullName>
    <description>The target amount or the outstanding amount for each product item.</description>
    <label>Target Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>